# ai-plan-issue-spec-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
compat/spec-kit-extension/ai-plan-issue/: README.md  config-template.yml  extension.yml
compat/spec-kit-extension/ai-plan-issue/commands/: speckit.ai-plan-issue.assign.md  speckit.ai-plan-issue.claim.md  speckit.ai-plan-issue.comment.md  speckit.ai-plan-issue.generate.md  speckit.ai-plan-issue.refine.md  speckit.ai-plan-issue.run.md  speckit.ai-plan-issue.split.md  speckit.ai-plan-issue.web.md
compat/spec-kit-extension/ai-plan-issue/scripts/sh/: ai_plan_issue.sh  board_server.sh
docs/: agent-protocol.md  architecture.md  context-coordination.md  formal-release-readiness.md  ledger-modularization-plan.md  release-checklist.md  release-v1.0.1-plan.md
plugins/codex/: README.md
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/scripts/: ai_plan_issue.sh  board_server.sh
plugins/codex/skills/ai-plan-issue/: SKILL.md
scripts/: ai-plan-issue  ai-plan-issue-board
src/ai_plan_issue/: __init__.py  board_server.py  cli.py  events.py  exporter.py  file_mutations.py  ledger.py  mutations.py  planning.py
src/ai_plan_issue/web/: app.js  index.html
tests/: test_ai_plan_issue.py  test_board_server.py  test_release_metadata.py
